hphp/hack/test/typecheck/arraykey_type_hint_bad.php.exp
File "arraykey_type_hint_bad.php", line 20, characters 5-6:
Invalid argument (Typing[4110])
File "arraykey_type_hint_bad.php", line 14, characters 12-19:
This is an array key (int/string)
File "arraykey_type_hint_bad.php", line 19, characters 8-14:
It is incompatible with an object of type C
